# agent-control-plane

./: .gitattributes  .gitignore  DEV.md  P1.5_worklog.md  P2_worklog.md  P3_worklog.md  P4.5_worklog.md  P5_worklog.md  P6.5_trial_guide.md  P6.5_worklog.md  P6_worklog.md  README.md  README_DEV.md  requirements-relay.txt
.github/ISSUE_TEMPLATE/: bug_report.md  environment_setup.md  trial_feedback.md
adapters/kimi/: adapter.py  (+3 more)
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
logs/: 2026-03-31.md  2026-04-01.md  P0_worklog.md  P1_worklog.md  P2.5_worklog.md  P4_worklog.md  P6.5_launch_checklist.md  P6.5_release_notes.md  P6.5_trial_guide.md  P6.5_worklog.md  P6_worklog.md  P7_worklog.md  P8_worklog.md  P9_worklog.md
relay/: __init__.py  approval_store.py  event_log.py  main.py  remote_agent_client.py  server_registry.py  session_store.py
remote-agent/: README.md  pyproject.toml
remote-agent/deploy/: remote-agent.env.example
remote-agent/deploy/systemd/: remote-agent.service.template
remote-agent/scripts/: install-systemd-user.sh
remote-agent/src/remote_agent/: __init__.py  __main__.py  app.py  cli.py  output.py  service_client.py
remote-agent/src/remote_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
remote-agent/src/remote_agent/providers/: __init__.py
remote-agent/src/remote_agent/providers/kimi/: __init__.py  host.py  worker.py
remote-agent/src/remote_agent/relay/: __init__.py  client.py
remote-agent/src/remote_agent/supervisor/: __init__.py  runtime.py
scripts/: generate_readme_screenshots.py
(+11 files in other folders)
